--- a/index.html
+++ b/index.html
@@ -1,61 +1,203 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-   <!-- Bootstrap CSS -->
-   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" 
-   rel="stylesheet" 
-   integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" 
-   crossorigin="anonymous">
-   <link rel="stylesheet" href="style.css">
-  <title>Portfolio Bootstrap-version</title>
-</head>
-<body>
-  <nav class="navbar navbar-light">
-    <div class="container-fluid">
-      <a class="navbar-brand" href="#">
-        <img src="./images/logo.svg" alt="brand-logo">
-      </a>
-    </div>
-  </nav>
-  <nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <div class="container-fluid">
-      <a class="navbar-brand" href="#">Navbar</a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" 
-      data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" 
-      aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarNav">
-        <ul class="navbar-nav">
-          <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="#">Home</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">Features</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">Pricing</a>
-          </li>
-        </ul>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- Bootstrap CSS -->
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
+      crossorigin="anonymous"
+    />
+    <link rel="stylesheet" href="style.css" />
+    <title>Portfolio Bootstrap-version</title>
+  </head>
+  <body>
+    <!-- Projects section -->
+    <section class="container p-4">
+      <div class="row justify-content-md-center rounded">
+        <div class="card my-5" style="max-width: 1156px; min-height: 450px">
+          <div class="row">
+            <div class="col-md-6 text-center">
+              <img
+                src="./images/Snapshoot-Portfolio4.svg"
+                class="img-fluid rounded-start w-100 p-3"
+                alt="card-background"
+              />
+            </div>
+            <div class="col-md-6">
+              <div class="card-body my-2">
+                <h5 class="card-title py-2">Tonic</h5>
+                <h6 class="card-title py-2">
+                  CANOPY <small class="text-muted">. Back END Dev . 2015</small>
+                </h6>
+                <p class="card-text py-2">
+                  A daily selection of privately personalized reads; no accounts
+                  or sign-ups required.
+                </p>
+                <div class="d-flex my-3 py-3">
+                  <span class="me-2 badge rounded-pill bg-light text-dark"
+                    >html</span
+                  >
+                  <span class="me-2 badge rounded-pill bg-light text-dark"
+                    >css</span
+                  >
+                  <span class="me-2 badge rounded-pill bg-light text-dark"
+                    >javaScript</span
+                  >
+                </div>
+                <button type="button" class="btn btn-primary py-2">
+                  See Project
+                </button>
+              </div>
+            </div>
+          </div>
+        </div>
       </div>
-    </div>
-  </nav>
-  <!-- Option 1: Bootstrap Bundle with Popper -->
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" 
-  integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" 
-  crossorigin="anonymous"></script>
+      <div class="row justify-content-md-center rounded">
+        <div class="card my-5" style="max-width: 1156px; min-height: 450px">
+          <div class="row">
+            <div class="col-md-6">
+              <div class="card-body my-2">
+                <h5 class="card-title py-2">Multi-Post Stories</h5>
+                <h6 class="card-title py-2">
+                  FACEBOOK
+                  <small class="text-muted"
+                    >. Full stack Back END Dev . 2015</small
+                  >
+                </h6>
+                <p class="card-text py-2">
+                  Experimental content creation feature that allows users to add
+                  to an existing story over the course of a day without spamming
+                  their friends.
+                </p>
+                <div class="d-flex my-3 py-3">
+                  <span class="me-2 badge rounded-pill bg-light text-dark"
+                    >html</span
+                  >
+                  <span class="me-2 badge rounded-pill bg-light text-dark"
+                    >Ruby on rails</span
+                  >
+                  <span class="me-2 badge rounded-pill bg-light text-dark"
+                    >css</span
+                  >
+                  <span class="me-2 badge rounded-pill bg-light text-dark"
+                    >javaScript</span
+                  >
+                </div>
+                <button type="button" class="btn btn-primary py-2">
+                  See Project
+                </button>
+              </div>
+            </div>
+            <div class="col-md-6 text-center">
+              <img
+                src="./images/Snapshoot-Portfolio2.svg"
+                class="img-fluid rounded-start w-100 p-3"
+                alt="card-background"
+              />
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="row justify-content-md-center rounded">
+        <div class="card my-5" style="max-width: 1156px; min-height: 450px">
+          <div class="row g-0">
+            <div class="col-md-6 text-center">
+              <img
+                src="./images/Snapshoot-Portfolio.svg"
+                class="img-fluid rounded-start w-100 p-3"
+                alt="card-background"
+              />
+            </div>
+            <div class="col-md-6">
+              <div class="card-body my-2">
+                <h5 class="card-title py-2">Tonic</h5>
+                <h6 class="card-title py-2">
+                  CANOPY <small class="text-muted">. Back END Dev . 2015</small>
+                </h6>
+                <p class="card-text py-2">
+                  A daily selection of privately personalized reads; no accounts
+                  or sign-ups required.
+                </p>
+                <div class="d-flex my-3 py-3">
+                  <span class="me-2 badge rounded-pill bg-light text-dark"
+                    >html</span
+                  >
+                  <span class="me-2 badge rounded-pill bg-light text-dark"
+                    >css</span
+                  >
+                  <span class="me-2 badge rounded-pill bg-light text-dark"
+                    >javaScript</span
+                  >
+                </div>
+                <button type="button" class="btn btn-primary py-2">
+                  See Project
+                </button>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="row justify-content-md-center rounded">
+        <div class="card my-5" style="max-width: 1156px; min-height: 450px">
+          <div class="row">
+            <div class="col-md-6">
+              <div class="card-body my-2">
+                <h5 class="card-title py-2">Tonic</h5>
+                <h6 class="card-title py-2">
+                  CANOPY <small class="text-muted">. Back END Dev . 2015</small>
+                </h6>
+                <p class="card-text py-2">
+                  A daily selection of privately personalized reads; no accounts
+                  or sign-ups required.
+                </p>
+                <div class="d-flex my-3 py-3">
+                  <span class="me-2 badge rounded-pill bg-light text-dark"
+                    >html</span
+                  >
+                  <span class="me-2 badge rounded-pill bg-light text-dark"
+                    >css</span
+                  >
+                  <span class="me-2 badge rounded-pill bg-light text-dark"
+                    >javaScript</span
+                  >
+                </div>
+                <button type="button" class="btn btn-primary py-2">
+                  See Project
+                </button>
+              </div>
+            </div>
+            <div class="col-md-6 text-center">
+              <img
+                src="./images/Snapshoot-Portfolio5.svg"
+                class="img-fluid rounded-start w-100 p-3"
+                alt="card-background"
+              />
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- End of Projects section -->
 
-  <!-- Option 2: Separate Popper and Bootstrap JS -->
- 
-  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" 
-  integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" 
-  crossorigin="anonymous"></script>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" 
-  integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" 
-  crossorigin="anonymous"></script>
-  
-</body>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+      crossorigin="anonymous"
+    ></script>
+
+    <script
+      src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"
+      integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js"
+      integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF"
+      crossorigin="anonymous"
+    ></script>
+  </body>
 </html>
