add projects & contact section

--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
   </head>
   <body>
     <!-- Projects section -->
-    <section class="container p-4">
-      <div class="row justify-content-md-center rounded">
+    <section class="container projects-section">
+      <div class="row justify-content-md-center rounded m-3">
         <div class="card my-5" style="max-width: 1156px; min-height: 450px">
           <div class="row">
             <div class="col-md-6 text-center">
@@ -56,7 +56,7 @@
           </div>
         </div>
       </div>
-      <div class="row justify-content-md-center rounded">
+      <div class="row justify-content-md-center rounded m-3">
         <div class="card my-5" style="max-width: 1156px; min-height: 450px">
           <div class="row">
             <div class="col-md-6">
@@ -102,7 +102,7 @@
           </div>
         </div>
       </div>
-      <div class="row justify-content-md-center rounded">
+      <div class="row justify-content-md-center rounded m-3">
         <div class="card my-5" style="max-width: 1156px; min-height: 450px">
           <div class="row g-0">
             <div class="col-md-6 text-center">
@@ -114,17 +114,22 @@
             </div>
             <div class="col-md-6">
               <div class="card-body my-2">
-                <h5 class="card-title py-2">Tonic</h5>
+                <h5 class="card-title py-2">Facebook 360</h5>
                 <h6 class="card-title py-2">
-                  CANOPY <small class="text-muted">. Back END Dev . 2015</small>
+                  Facebook
+                  <small class="text-muted">. Back END Dev . 2015</small>
                 </h6>
                 <p class="card-text py-2">
-                  A daily selection of privately personalized reads; no accounts
-                  or sign-ups required.
+                  Exploring the future of media in Facebook's first Virtual
+                  Reality app; a place to discover and enjoy 360 photos and
+                  videos on Gear VR.
                 </p>
                 <div class="d-flex my-3 py-3">
                   <span class="me-2 badge rounded-pill bg-light text-dark"
                     >html</span
+                  >
+                  <span class="me-2 badge rounded-pill bg-light text-dark"
+                    >Roby on rails</span
                   >
                   <span class="me-2 badge rounded-pill bg-light text-dark"
                     >css</span
@@ -141,22 +146,25 @@
           </div>
         </div>
       </div>
-      <div class="row justify-content-md-center rounded">
+      <div class="row justify-content-md-center rounded m-3">
         <div class="card my-5" style="max-width: 1156px; min-height: 450px">
           <div class="row">
             <div class="col-md-6">
               <div class="card-body my-2">
-                <h5 class="card-title py-2">Tonic</h5>
+                <h5 class="card-title py-2">Uber Navigation</h5>
                 <h6 class="card-title py-2">
-                  CANOPY <small class="text-muted">. Back END Dev . 2015</small>
+                  Uber <small class="text-muted">. Lead Developer . 2018</small>
                 </h6>
                 <p class="card-text py-2">
-                  A daily selection of privately personalized reads; no accounts
-                  or sign-ups required.
+                  A smart assistant to make driving more safe, efficient, and
+                  fun by unlocking your most expensive computer: your car.
                 </p>
                 <div class="d-flex my-3 py-3">
                   <span class="me-2 badge rounded-pill bg-light text-dark"
                     >html</span
+                  >
+                  <span class="me-2 badge rounded-pill bg-light text-dark"
+                    >Roby on rails</span
                   >
                   <span class="me-2 badge rounded-pill bg-light text-dark"
                     >css</span
@@ -183,6 +191,62 @@
     </section>
     <!-- End of Projects section -->
 
+    <!-- About Section -->
+
+    <!-- End of About Section -->
+
+    <!-- Contact Section -->
+    <section class="container contact-section">
+      <div class="row justify-content-md-center py-5">
+        <div class="contact d-flex flex-column text-white">
+          <h5 class="align-self-center">Contact me</h5>
+          <p class="align-self-center w-75 py-3">
+            If you have an application you are interested in developing, a
+            feature that you need built or a project that needs coding. I’d love
+            to help with it
+          </p>
+          <div class="container">
+            <div class="row justify-content-md-center mx-5">
+              <form class="row g-3">
+                <div class="mb-3">
+                  <input
+                    type="email"
+                    class="form-control"
+                    id="exampleFormControlInput1"
+                    placeholder="Alexandra Loremipsum"
+                  />
+                </div>
+                <div class="mb-3">
+                  <input
+                    type="email"
+                    class="form-control"
+                    id="exampleFormControlInput1"
+                    placeholder="alexandra@gmail.com"
+                  />
+                </div>
+                <div class="mb-3">
+                  <textarea
+                    class="form-control"
+                    id="exampleFormControlTextarea1"
+                    rows="3"
+                    placeholder="Write your message here"
+                  ></textarea>
+                </div>
+                <div class="mb-3">
+                  <button
+                    type="button"
+                    class="btn btn-primary w-25 p-2 align-self-center"
+                  >
+                    Primary
+                  </button>
+                </div>
+              </form>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- End of Contact Section -->
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
